--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
 	"name": "list-to-in-query",
+	"icon": "images/icon.png",
 	"displayName": "List to SQL IN Query (...) builder",
+	"publisher": "phplasma",
 	"description": "Convert a list of strings to an SQL IN query clause",
 	"version": "1.0.0",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Plasma/list-to-in-query.git"
+	},
 	"engines": {
 		"vscode": "^1.39.0"
 	},
