Added new configuration options so you can:
1) Keep generated IN Query (...) values on the same line (instead of separated on new lines)
2) Not quote numeric values in the IN Query (...)

Fixes #1

--- a/package.json
+++ b/package.json
@@ -25,7 +25,22 @@
 				"command": "extension.list-to-in-query",
 				"title": "Convert new lines into SQL IN Query ('Line 1', 'Line 2', ...)"
 			}
-		]
+		],
+		"configuration": {
+			"title": "List to SQL In Query (...) builder",
+			"properties": {
+				"list-to-in-query-builder.joinValuesUsingNewLine": {
+					"type": "boolean",
+					"default": true,
+					"description": "Place each value written in the IN Query (...) on its own line."
+				},
+				"list-to-in-query-builder.quoteNumbers": {
+					"type": "boolean",
+					"default": false,
+					"description": "Quote numeric values when building the IN Query (...)."
+				}
+			}
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
