--- a/package.json
+++ b/package.json
@@ -57,12 +57,16 @@
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^5.2.6",
-		"@types/node": "^10.12.21",
-		"@types/vscode": "^1.39.0",
-		"glob": "^7.1.4",
-		"mocha": "^6.1.4",
-		"typescript": "^3.3.1",
-		"tslint": "^5.12.1",
-		"vscode-test": "^1.2.0"
+		"@types/node": "^10.17.17",
+		"@types/vscode": "^1.43.0",
+		"glob": "^7.1.6",
+		"mocha": "^7.1.1",
+		"tslint": "^5.20.1",
+		"typescript": "^3.8.3",
+		"vscode-test": "^1.3.0"
+	},
+	"dependencies": {
+		"minimist": "^1.2.5",
+		"mkdirp": "^1.0.3"
 	}
 }
