--- a/package.json
+++ b/package.json
@@ -60,13 +60,12 @@
 		"@types/node": "^10.17.17",
 		"@types/vscode": "^1.43.0",
 		"glob": "^7.1.6",
+		"minimist": "^1.2.5",
+		"mkdirp": "^1.0.3",
 		"mocha": "^7.1.1",
 		"tslint": "^5.20.1",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
 	},
-	"dependencies": {
-		"minimist": "^1.2.5",
-		"mkdirp": "^1.0.3"
-	}
+	"dependencies": {}
 }
